added state of flipped

--- a/src/style.css
+++ b/src/style.css
@@ -46,7 +46,7 @@
 }
 html,
 body {
-  height: 100%;
+  height: 90%;
   width: 100%;
 }
 #app {
@@ -54,12 +54,12 @@ body {
   height: 100%;
 }
 .grid {
-  display: flex;
+  display: grid;
   gap: var(--spacing-md);
-  height: 100%;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
+
+  grid-template-columns: repeat(4, 60px);
+  justify-content: space-around;
+
   padding: var(--spacing-xs);
   margin-top: var(--spacing-md);
 }
@@ -67,7 +67,7 @@ body {
 .tile-container {
   width: 60px;
   height: 90px;
-  flex: 0 0 60px;
+
   perspective: 1000px;
 }
 
